# alzabo

./: .gitignore  AGENTS.md  CLAUDE.md  CLI_ROADMAP.md  EVAL_AUDIT.md  LICENSE  NEXT.md  README.md  ROADMAP.md  pyproject.toml  transcript-search.py
.github/workflows/: ci.yml
scripts/: verify_cache.py  verify_cli_only.sh  verify_incremental_reindex.sh
src/alzabo/: __init__.py  cache.py  cli.py  extract.py  extract_cli.py  index.py  main_cli.py  output.py  render.py  server.py
src/transcript_search/: __init__.py  cli.py  index.py  parsers.py  render.py  server.py
tests/: test_cache.py  test_extract.py  test_main_cli.py  test_output.py  test_server.py
transcript-search/.claude/: settings.local.json
