[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transcript-search"
version = "0.1.0"
description = "MCP server for searching Claude Code and Codex transcripts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "mcp[cli]>=1.0",
  "model2vec",
  "numpy",
  "pytest",
  "rank-bm25",
  "watchdog>=4.0",
]

[project.scripts]
transcript-search = "transcript_search.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
