[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alzabo"
version = "0.1.0"
description = "MCP server for searching Claude Code and Codex transcripts."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{name = "Zander Mackie"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
  "mcp[cli]>=1.0",
  "model2vec",
  "numpy",
  "rank-bm25",
  "watchdog>=4.0",
]

[project.scripts]
alzabo = "alzabo.cli:main"

[project.urls]
Homepage = "https://github.com/DataDog/alzabo"
Repository = "https://github.com/DataDog/alzabo"
Issues = "https://github.com/DataDog/alzabo/issues"

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
