[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alzabo"
version = "0.1.0"
description = "CLI tool for searching Claude Code and Codex transcripts."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{name = "Zander Mackie"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
  "click",
  "model2vec",
  "numpy",
  "rank-bm25",
]

[project.scripts]
alzabo = "alzabo.main_cli:main"
alzabo-extract = "alzabo.extract_cli:main"

[project.urls]
Homepage = "https://github.com/zmackie-datadog/alzabo"
Repository = "https://github.com/zmackie-datadog/alzabo"
Issues = "https://github.com/zmackie-datadog/alzabo/issues"

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
